# bonio-booth-new-rust

./: .gitignore  BUILD.md  RELEASE-SIMPLE.md  RELEASE.md  build-release.ps1  build.md  index.html  instruction.md  lastest.json  latest.json  package-lock.json  package.json
.github/workflows/: release.yml
EDSDK/Header/: EDSDK.h  EDSDKTypes.h
filters/: B&W.cube  Evolution.cube  Matte_Brown_Mono.cube  Orange & Teal.cube  Sepia_Brown.cube  Warm Light.cube
scripts/: ensure-ffmpeg-resource.js  run-release.js
src/: App.css  App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: test_jfif.rs
src-tauri/src/: api.rs  canon.rs  edsdk_sys.rs  image_processing.rs  lib.rs  main.rs  printer.rs  shutdown.rs  sse.rs  video.rs
src/components/: BackButton.tsx  CameraConfigModal.tsx  ContextMenu.tsx  Countdown.tsx  ErrorOverlay.tsx  HorizontalScroll.tsx  PaperPositionModal.tsx  PrinterConfigModal.tsx  ShutdownOverlay.tsx
src/config/: appConfig.ts  filters.ts
src/hooks/: useAutoUpdate.ts  useCanon.ts  useDeviceCheck.ts  useIdleTimeout.ts  useSSE.ts  useShutdown.ts  useTimerShutdown.ts
src/pages/: ApplyFilter.tsx  CouponEntry.tsx  FrameSelection.tsx  GetHelp.tsx  Home.tsx  MachineVerify.tsx  MainShooting.tsx  Maintenance.tsx  OutOfPaper.tsx  PaymentQR.tsx  PaymentSelection.tsx  PhotoResult.tsx  PrepareShooting.tsx  RequestImage.tsx  SlotSelection.tsx  TermsAndServices.tsx
src/utils/: printingState.ts
