[package]
name = "bonio-booth"
version = "0.1.0"
description = "Bonio Photobooth - Rust + React Tauri"
authors = ["BonioLabs"]
edition = "2021"

[lib]
name = "bonio_booth_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
image = "0.25"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
qrcode = "0.14"
windows = { version = "0.58", features = ["Win32_Graphics_Printing", "Win32_Foundation", "Win32_System_Com"] }
log = "0.4"
env_logger = "0.11"
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2.3.1"

